Dark mode fix

--- a/public/css/dark.scss
+++ b/public/css/dark.scss
@@ -117,13 +117,6 @@ $text-muted: $gray-400;
 	background-color: $gray-100 !important;
 }
 
-.btn-light-bordered {
-	@extend .btn-light;
-	background-color: $white;
-	border: 1px solid $gray-400 !important;
-	color: $gray-700 !important;
-}
-
 .badge-danger {
 	background-color: darken($red, 20);
 	color: $black;
