--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -655,7 +655,7 @@ tr.table-warning:hover > td {
 .btn-light-bordered-primary {
 	@extend .btn-light;
 	background-color: $white;
-	border: 1px solid $primary !important;
+	border: 1px solid $blue !important;
 	color: $gray-700 !important;
 }
 
